<resources>
    <string name="app_name">SavePass</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="locker">Locker</string>
    <string name="search_account_name">Search account name</string>
    <string name="add_button">Add Button</string>
    <string name="account_name">Account name</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="save">Save</string>
    <string name="password_colon">Password:</string>
    <string name="delete_password_account">Delete Password Account</string>
    <string name="password_visibility_on_off">Password Visibility on/off</string>
    <string name="my_passwords">My passwords</string>
</resources>